[tool.poetry]
name = "projeto-etl"
version = "0.1.0"
description = "Meu projeto de ETL"
authors = ["Moisés <moises_arruda@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.12.0"
blue = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
